# SpaceInvaders

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Player.cpp.59C946A7E5212578.idx  Player.h.81193B5F110C594B.idx  SDLApp.h.343F97562266A857.idx  bullet.cpp.81F9B1DC70082151.idx  bullet.h.2A19B74814773425.idx  includes.h.8F2A832459AC2A33.idx  main.cpp.FFF15AE2DA44709F.idx
headers/: Player.h  SDLApp.h  bullet.h  enemy.h  includes.h
src/: Player.cpp  bullet.cpp  enemy.cpp  main.cpp
